@@ -1,5 +1,10 @@
 2009-04-28  Pavel Roskin  <proski@gnu.org>
 
+	* disk/fs_uuid.c (grub_fs_uuid_open): Use parent->data for dev,
+	not disk.  Adjust all dependencies.
+	(grub_device_close): Use grub_device_close(), not
+	grub_disk_close().
+
 	* disk/fs_uuid.c (grub_fs_uuid_open): Allocate memory to copy
 	parent's partition, don't copy it by reference, as it gets freed
 	on close.
